--- a/styles/sponsors.css
+++ b/styles/sponsors.css
@@ -2,7 +2,7 @@
     width: 100%;
     min-height: 66px;
     max-width: var(--Mw);
-    margin-top: 20px;
+    margin-top: 40px;
     position: relative;
     overflow: hidden;
 }
